<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".activity.ChoixModeActivity">


    <TextView
        android:id="@+id/texteChoix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texte_choix"
        android:textColor="@color/white"
        android:textSize="0.3in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/accepter"
        android:layout_width="251dp"
        android:layout_height="84dp"
        android:backgroundTint="#8BC34A"
        android:gravity="center"
        android:text="@string/activer"
        android:textColor="@color/white"
        android:textSize="0.3in"
        android:backgroundTintMode="@color/palegreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/refuser"
        android:layout_width="247dp"
        android:layout_height="81dp"
        android:backgroundTint="@color/red_smooth"
        android:backgroundTintMode="@color/red_smooth"
        android:text="@string/refuser"
        android:textColor="@color/white"
        android:textSize="0.3in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />


</androidx.constraintlayout.widget.ConstraintLayout>