<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".activity.ParametresMesureActivity">


    <TextView
        android:id="@+id/texte_minutes_secondes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_secondes"
        android:textColor="@color/white"
        android:textSize="0.08in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />


    <LinearLayout
        android:id="@+id/intervalleLayout"
        android:layout_width="106dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <NumberPicker
            android:id="@+id/minutes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/secondes"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_weight="1" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/baisseEchelle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/phantomwhite"
        android:contentDescription="Bouton qui décrémente l'echelle"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/valeurEchelle"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />


    <TextView
        android:id="@+id/valeurEchelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <ImageButton
        android:id="@+id/augmentEchelle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/phantomwhite"
        android:contentDescription="Bouton qui incrémente l'échelle"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/valeurEchelle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Switch
        android:id="@+id/switchSonore"
        android:layout_width="136dp"
        android:layout_height="100dp"
        android:text="@string/signal_sonore"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <ImageButton
        android:id="@+id/augmentUti"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/phantomwhite"
        android:contentDescription="Bouton qui incrémente le nombre d'utilisateur"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/valeurNombreUti"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/valeurNombreUti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />


    <ImageButton
        android:id="@+id/baisseUti"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/phantomwhite"
        android:contentDescription="Bouton qui décrémente le nombre d'utilisateur"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/valeurNombreUti"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/nombreUtilisateurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreUtilisateurs"
        android:textColor="@color/white"
        android:textSize="0.1in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/parametrage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texte_parametrage"
        android:textColor="@color/white"
        android:textSize="0.3in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/echelleDeMesure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/echelle_mesure"
        android:textColor="@color/white"
        android:textSize="0.1in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/intervalleMesure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervalle_mesures_texte"
        android:textColor="@color/white"
        android:textSize="0.1in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <Button
        android:id="@+id/boutonSuivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/bouton_suivant"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/boutonPrecedant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="Précédent"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/DureeMesure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DureeMesure"
        android:textColor="@color/white"
        android:textSize="0.1in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/texte_minutes_secondes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_secondes"
        android:textColor="@color/white"
        android:textSize="0.08in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <LinearLayout
        android:id="@+id/intervalle2Layout"
        android:layout_width="106dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <NumberPicker
            android:id="@+id/minutes2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/secondes2"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_weight="1" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>